--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ cachetools==5.3.2
 certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
+ecdsa==0.18.0
 gitdb==4.0.11
 GitPython==3.1.41
 idna==3.6
